@@ -1,26 +1,29 @@
 package 数组;
 
+import java.util.ArrayList;
+
 /**
  * @author Limbo
  */
 public class Test {
     
     public static void main(String[] args) {
-        
-        Array<Object> array = new Array<>();
-        for (int i = 0 ; i < 10 ; i++) {
+        Array<Integer> array = new Array<>(6);
+        for (int i = 0 ; i < 9 ; i++) {
             array.addLast(i);
+            System.out.println(array);
         }
-        System.out.println(array);
-        array.addLast(10);
-        array.addLast(new Student("a" , 23));
-        System.out.println(array);
-        array.remove(0);
-        array.remove(0);
-        System.out.println(array);
-        for (int i = 0 ; i < 10 ; i++) {
-            array.addLast(i);
+        //        array.addFirst(1);
+        //        array.remove(0);
+        //        array.addLast(76);
+        //        array.removeElement(7);
+        //        array.add(1 , 100);
+        //        array.removeFirst();
+        //        array.removeLast();
+        //        array.set(8 , 2);
+        for (int i = 1 ; i < 9 ; i++) {
+            array.removeFirst();
+            System.out.println(array);
         }
-        System.out.println(array);
     }
 }
